2008-06-27  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* autostart.c: Incorporated patch from iAN Coog: 1. Add colon
	(":") after "LOAD" and "RUN" lines used to start. This is
	helpful if there is already something on the screen, to prevent
	it to provoke some error messages. 2. remember original true
	drive emulation state before using autostart. This fixes the
	problem that TDE is not re-activated after autostart.  3. Dev
	Traps set to ON always in autostart_tape() for T64s. T64 without
	VTD don't load, so it's a must to activate it always with them.
	(TAP files don't care.)

2008-06-25  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* arch/win32/vice.dsw, arch/win32/_all.dsp: New (dummy) project
	_all.

	* c64/reu.c: Fixed problems with bank register not masking out
	unused bits, and autoload option which has to copy the shadow
	registers back. Fixed doxygen a little.

2008-06-23  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.20

2008-06-23  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* arch/win32/make-msvc-bindist.bat,
	arch/win32/watcom/make-watcom-bindist.bat: Added (had been
	forgotten in the previous version)

2008-06-23  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* c64/reu.c: Implement the special wrap-around of the 1700 when
	it uses 64Kx1 DRAMs.  That is, the bank register behaves like
	the other REUs (with the special wrap around), but the DRAM
	access itself is limited to 0x00000-0x1ffff.

	* vdrive/vdrive_command: Changed flow in vdrive_command_memory()
	as suggested by Marco.

	* c64/tfe.c: disabled log_message() for tfe_hash_mask[], as it
	accessed memory out of bounds.

2008-06-22  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* arch/amigaos/uiapi.c, arch/os2/ui.c,
	arch/unix/x11/gnome/x11ui.c, arch/unix/x11/xaw/x11ui.c: Added
	the option to choose 'continue' for the CPU JAM dailog.

	* monitor/mon_lex.c, monitor/mon_lex.l: Fixed the undump command
	as provided by M. Kiesel <mayne@users.sourceforge.net>.
