@@ -59,6 +59,9 @@ IDM_FILE_EXIT
 IDM_EXIT
 IDM_ABOUT
 IDM_PAUSE
+IDM_EDIT_CUT
+IDM_EDIT_COPY
+IDM_EDIT_PASTE
 IDM_SINGLE_FRAME_ADVANCE
 IDM_AUTOSTART
 IDM_RESET_HARD
